--- a/to do list/toDoList.html
+++ b/to do list/toDoList.html
@@ -6,27 +6,15 @@
     <title>Document</title>
     
     <link rel="stylesheet" href="toDoList.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
-      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+    <script
+      src="https://kit.fontawesome.com/9eb162ac0d.js"
       crossorigin="anonymous"
-    />
+    ></script>
   </head>
   <body>
     <section class="list">
         <header class="header">Shopping List</header>
-        <ul class="items">
-            <!-- <li class="item_row">
-                <div class="item">
-                    <span class="item_name">Eggs</span>
-                    <button class="item_delete">
-                        <i class="fas fa-trash-alt"></i>
-                    </button>
-                </div>
-                <div class="item_divider"></div>
-            </li> -->
-        </ul>
+        <ul class="items"></ul>
         <footer class="footer">
             <input type="text" class="footer_input">
             <button class="footer_button">
